# Deep-Researcher-RAG-System

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: ingest_and_index.py  main.py  retreiver.py  streamlit_app.py  summarizer.py
backend/: __init__.py  main.py
backend/api/: __init__.py  deps.py
backend/api/routes/: documents.py  query.py  system.py
backend/core/: config.py  exceptions.py  logging.py
backend/models/: requests.py  responses.py
backend/services/: __init__.py  ingestion.py  retriever.py
backend/services/generation/: __init__.py  base.py  distilbart.py  lexrank.py  ollama.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: api_client.py  app.py  state.py  style.css
frontend/components/: charts.py  results.py  sidebar.py
scripts/: build_index.py
tests/: conftest.py  test_api.py  test_generation.py  test_retriever.py
