[project]
name = "deep-researcher"
version = "0.2.0"
description = "RAG Document Q&A System with multiple AI backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.35",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pypdf>=4.0",
    "python-multipart",
    "sentence-transformers>=3.0",
    "faiss-cpu",
    "sumy>=0.11",
    "nltk>=3.8",
    "ollama>=0.2",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "structlog>=24.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
distilbart = ["torch", "transformers>=4.40.0", "accelerate"]
ocr = ["pytesseract", "Pillow"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B905",   # zip strict — FAISS returns same-length arrays
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
